--- a/templates/index.html
+++ b/templates/index.html
@@ -3,7 +3,7 @@
 	<head>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<title>后台模板</title>
+		<title>UI自动化测试平台</title>
 		<link rel="stylesheet" href="../static/css/amazeui.css" />
 		<link rel="stylesheet" href="../static/css/core.css" />
 		<link rel="stylesheet" href="../static/css/menu.css" />
@@ -29,7 +29,7 @@
 		<!-- Begin page -->
 		<header class="am-topbar am-topbar-fixed-top">
 			<div class="am-topbar-left am-hide-sm-only">
-                <a href="index.html" class="logo"><span>Admin<span>to</span></span><i class="zmdi zmdi-layers"></i></a>
+                <a href="index.html" class="logo"><span>UI自动化测试平台</span><i class="zmdi zmdi-layers"></i></a>
             </div>
 
 			<div class="contain">
@@ -38,52 +38,52 @@
 					<li><h4 class="page-title">执行数据</h4></li>
 				</ul>
 
-				<ul class="am-nav am-navbar-nav am-navbar-right">
-					<li class="inform"><i class="am-icon-bell-o" aria-hidden="true"></i></li>
-					<li class="hidden-xs am-hide-sm-only">
-                        <form role="search" class="app-search">
-                            <input type="text" placeholder="Search..." class="form-control">
-                            <a href=""><img src="../static/img/search.png"></a>
-                        </form>
-                    </li>
-				</ul>
+<!--				<ul class="am-nav am-navbar-nav am-navbar-right">-->
+<!--					<li class="inform"><i class="am-icon-bell-o" aria-hidden="true"></i></li>-->
+<!--					<li class="hidden-xs am-hide-sm-only">-->
+<!--                        <form role="search" class="app-search">-->
+<!--                            <input type="text" placeholder="Search..." class="form-control">-->
+<!--                            <a href=""><img src="../static/img/search.png"></a>-->
+<!--                        </form>-->
+<!--                    </li>-->
+<!--				</ul>-->
 			</div>
 		</header>
 		<!-- end page -->
 
 		<div class="admin">
 
-				  <div class="admin-sidebar am-offcanvas  am-padding-0" id="admin-offcanvas">
+				  <div class="admin-sidebar am-offcanvas  am-padding-0" style="zindex:0" id="admin-offcanvas">
 				    <div class="am-offcanvas-bar admin-offcanvas-bar">
 				    	<!-- User -->
-						<div class="user-box am-hide-sm-only">
-	                        <div class="user-img">
-	                            <img src="../static/img/avatar-1.jpg" alt="user-img" title="Mat Helme" class="img-circle img-thumbnail img-responsive">
-	                            <div class="user-status offline"><i class="am-icon-dot-circle-o" aria-hidden="true"></i></div>
-	                        </div>
-	                        <h5><a href="#">Mat Helme</a> </h5>
-	                        <ul class="list-inline">
-	                            <li>
-	                                <a href="#">
-	                                    <i class="fa fa-cog" aria-hidden="true"></i>
-	                                </a>
-	                            </li>
+<!--						<div class="user-box am-hide-sm-only">-->
+<!--	                        <div class="user-img">-->
+<!--	                            <img src="../static/img/avatar-1.jpg" alt="user-img" title="Mat Helme" class="img-circle img-thumbnail img-responsive">-->
+<!--	                            <div class="user-status offline"><i class="am-icon-dot-circle-o" aria-hidden="true"></i></div>-->
+<!--	                        </div>-->
+<!--	                        <h5><a href="#">Mat Helme</a> </h5>-->
+<!--	                        <ul class="list-inline">-->
+<!--	                            <li>-->
+<!--	                                <a href="#">-->
+<!--	                                    <i class="fa fa-cog" aria-hidden="true"></i>-->
+<!--	                                </a>-->
+<!--	                            </li>-->
 
-	                            <li>
-	                                <a href="#" class="text-custom">
-	                                    <i class="fa fa-cog" aria-hidden="true"></i>
-	                                </a>
-	                            </li>
-	                        </ul>
-	                    </div>
+<!--	                            <li>-->
+<!--	                                <a href="#" class="text-custom">-->
+<!--	                                    <i class="fa fa-cog" aria-hidden="true"></i>-->
+<!--	                                </a>-->
+<!--	                            </li>-->
+<!--	                        </ul>-->
+<!--	                    </div>-->
 	                    <!-- End User -->
 
 						 <ul class="am-list admin-sidebar-list">
 						    <li><a href="/"><span class="am-icon-home"></span> 首页</a></li>
 						    <li class="admin-parent">
-						      <a class="am-cf" data-am-collapse="{target: '#collapse-nav1'}"><span class="am-icon-table"></span> 表格 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
+						      <a class="am-cf" data-am-collapse="{target: '#collapse-nav1'}"><span class="am-icon-table"></span> 任务 <span class="am-icon-angle-right am-fr am-margin-right"></span></a>
 						      <ul class="am-list am-collapse admin-sidebar-sub am-in" id="collapse-nav1">
-						        <li><a href="" class="am-cf"> 基本表格</span></a></li>
+<!--						        <li><a href="" class="am-cf"> 基本表格</span></a></li>-->
 						        <li><a href="table_complete" id="taskList">任务列表</a></li>
 
 						      </ul>
@@ -126,14 +126,14 @@
 					<!-- Row start -->
 						<div class="am-u-md-3">
 							<div class="card-box">
-								<h4 class="header-title m-t-0 m-b-30">总收入</h4>
+								<h4 class="header-title m-t-0 m-b-30">测试案例总数</h4>
 								<div class="widget-chart-1 am-cf">
                                     <div id="widget-chart-box-1" style="height: 110px;width: 110px;float: left;">
                                     </div>
 
                                     <div class="widget-detail-1" style="float: right;">
                                         <h2 class="p-t-10 m-b-0"> 256 </h2>
-                                        <p class="text-muted">今日收入</p>
+                                        <p class="text-muted">今日汇总</p>
                                     </div>
                                 </div>
 							</div>
@@ -141,12 +141,11 @@
 						<!-- col end -->
 						<div class="am-u-md-3">
 							<div class="card-box">
-								<h4 class="header-title m-t-0 m-b-30">销售分析</h4>
+								<h4 class="header-title m-t-0 m-b-30">成功率</h4>
 								<div class="widget-box-2">
                                     <div class="widget-detail-2">
                                         <span class="badge  pull-left m-t-20  am-round" style="color: #fff; background: #0e90d2;">32% <i class="zmdi zmdi-trending-up"></i> </span>
-                                        <h2 class="m-b-0"> 8451 </h2>
-                                        <p class="text-muted m-b-25">Revenue today</p>
+                                        <h2 class="m-b-0"> 30 </h2>
                                     </div>
                                     <div class="am-progress am-progress-xs am-margin-bottom-0">
 									    <div class="am-progress-bar" style="width: 80%"></div>
@@ -157,14 +156,14 @@
 						<!-- col end -->
 						<div class="am-u-md-3">
 							<div class="card-box">
-								<h4 class="header-title m-t-0 m-b-30">总收入</h4>
+								<h4 class="header-title m-t-0 m-b-30">待执行总数</h4>
 								<div class="widget-chart-1 am-cf">
                                     <div id="widget-chart-box-2" style="height: 110px;width: 110px;float: left;">
                                     </div>
 
                                     <div class="widget-detail-1" style="float: right;">
-                                        <h2 class="p-t-10 m-b-0"> 256 </h2>
-                                        <p class="text-muted">今日收入</p>
+                                        <h2 class="p-t-10 m-b-0"> 20 </h2>
+                                        <p class="text-muted">待执行数</p>
                                     </div>
                                 </div>
 							</div>
@@ -172,11 +171,11 @@
 						<!-- col end -->
 						<div class="am-u-md-3">
 							<div class="card-box">
-								<h4 class="header-title m-t-0 m-b-30">销售分析</h4>
+								<h4 class="header-title m-t-0 m-b-30">失败率</h4>
 								<div class="widget-box-2">
                                     <div class="widget-detail-2">
                                         <span class="badge  pull-left m-t-20  am-round progress-bar-pink" style="color: #fff;">32% <i class="zmdi zmdi-trending-up"></i> </span>
-                                        <h2 class="m-b-0"> 8451 </h2>
+                                        <h2 class="m-b-0"> 30 </h2>
                                         <p class="text-muted m-b-25">Revenue today</p>
                                     </div>
                                     <div class="am-progress am-progress-xs am-margin-bottom-0" style="background: rgba(255, 138, 204, 0.2);">
