--- a/templates/index.html
+++ b/templates/index.html
@@ -12,17 +12,24 @@
 		<link rel="stylesheet" href="../static/css/page/typography.css" />
 		<link rel="stylesheet" href="../static/css/page/form.css" />
 		<link rel="stylesheet" href="../static/css/component.css" />
-        <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+		<link rel="stylesheet" href="../static/css/bootstrap.min.css" />
+<!--        <link rel="stylesheet" href="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/css/bootstrap.min.css">-->
+		<script src="../static/js/jquery.min.js"></script>
+    	<script src="../static/js/bootstrap.min.js"></script>
+<!--        <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>-->
+<!--        <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>-->
         <script type="text/javascript" src="../static/js/index.js"></script>
-        <script src="https://code.highcharts.com.cn/jquery/jquery-1.8.3.min.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts/highcharts.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts/modules/exporting.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts/modules/data.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts/modules/series-label.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts/modules/oldie.js"></script>
-        <script src="https://code.highcharts.com.cn/highcharts-plugins/highcharts-zh_CN.js"></script>
+        <script src="../static/js/highcharts/jquery-1.8.3.min.js"></script>
+		<script src="../static/js/highcharts/highcharts.js"></script>
+		<script src="../static/js/highcharts/exporting.js"></script>
+		<script src="../static/js/highcharts/data.js"></script>
+		<script src="../static/js/highcharts/series-label.js"></script>
+		<script src="../static/js/highcharts/oldie.js"></script>
+		<script src="../static/js/highcharts/highcharts-zh_CN.js"></script>
+<!--        <script src="https://code.highcharts.com.cn/highcharts/modules/data.js"></script>-->
+<!--        <script src="https://code.highcharts.com.cn/highcharts/modules/series-label.js"></script>-->
+<!--        <script src="https://code.highcharts.com.cn/highcharts/modules/oldie.js"></script>-->
+<!--        <script src="https://code.highcharts.com.cn/highcharts-plugins/highcharts-zh_CN.js"></script>-->
 
 	</head>
 	<body>
@@ -132,7 +139,7 @@
                                     </div>
 
                                     <div class="widget-detail-1" style="float: right;">
-                                        <h2 class="p-t-10 m-b-0"> 256 </h2>
+                                        <h2 class="p-t-10 m-b-0"></h2>
                                         <p class="text-muted">今日汇总</p>
                                     </div>
                                 </div>
@@ -142,13 +149,14 @@
 						<div class="am-u-md-3">
 							<div class="card-box">
 								<h4 class="header-title m-t-0 m-b-30">成功率</h4>
-								<div class="widget-box-2">
-                                    <div class="widget-detail-2">
-                                        <span class="badge  pull-left m-t-20  am-round" style="color: #fff; background: #0e90d2;">32% <i class="zmdi zmdi-trending-up"></i> </span>
-                                        <h2 class="m-b-0"> 30 </h2>
+								<div id="widget-box-2" class="widget-box-2">
+                                    <div id="widget-detail-2" class="widget-detail-2">
+                                        <span class="badge  pull-left m-t-20  am-round" style="color: #fff; background: #0e90d2;"><i class="zmdi zmdi-trending-up"></i> </span>
+                                        <h2 class="m-b-0"></h2>
+										<p class="text-muted m-b-25">成功条数</p>
                                     </div>
                                     <div class="am-progress am-progress-xs am-margin-bottom-0">
-									    <div class="am-progress-bar" style="width: 80%"></div>
+									    <div class="am-progress-bar"></div>
 									</div>
                                 </div>
 							</div>
@@ -161,8 +169,8 @@
                                     <div id="widget-chart-box-2" style="height: 110px;width: 110px;float: left;">
                                     </div>
 
-                                    <div class="widget-detail-1" style="float: right;">
-                                        <h2 class="p-t-10 m-b-0"> 20 </h2>
+                                    <div class="widget-detail-4" style="float: right;">
+                                        <h2 class="p-t-10 m-b-0"></h2>
                                         <p class="text-muted">待执行数</p>
                                     </div>
                                 </div>
@@ -172,14 +180,14 @@
 						<div class="am-u-md-3">
 							<div class="card-box">
 								<h4 class="header-title m-t-0 m-b-30">失败率</h4>
-								<div class="widget-box-2">
+								<div id="widget-box-3" class="widget-box-2">
                                     <div class="widget-detail-2">
-                                        <span class="badge  pull-left m-t-20  am-round progress-bar-pink" style="color: #fff;">32% <i class="zmdi zmdi-trending-up"></i> </span>
-                                        <h2 class="m-b-0"> 30 </h2>
-                                        <p class="text-muted m-b-25">Revenue today</p>
+                                        <span class="badge  pull-left m-t-20  am-round progress-bar-pink" style="color: #fff;"><i class="zmdi zmdi-trending-up"></i> </span>
+                                        <h2 class="m-b-0"></h2>
+                                        <p class="text-muted m-b-25">失败条数</p>
                                     </div>
                                     <div class="am-progress am-progress-xs am-margin-bottom-0" style="background: rgba(255, 138, 204, 0.2);">
-									    <div class="am-progress-bar progress-bar-pink" style="width: 80%"></div>
+									    <div class="am-progress-bar progress-bar-pink"></div>
 									</div>
                                 </div>
 							</div>
