--- a/templates/table_complete.html
+++ b/templates/table_complete.html
@@ -15,8 +15,8 @@
     <link rel="stylesheet" href="../static/css/page/form.css"/>
     <link rel="stylesheet" type="text/css" href="../static/css/bootstrap.min.css">
     <script type="text/javascript" language="javascript" src="../static/js/bootstrapPager.js"></script>
-    <script src="https://cdn.staticfile.org/jquery/2.1.1/jquery.min.js"></script>
-    <script src="https://cdn.staticfile.org/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="../static/js/jquery.min.js"></script>
+    <script src="../static/js/bootstrap.min.js"></script>
     <script type="text/javascript" src="../static/js/table_complete.js"></script>
 
 
